chore: fix table overflow

--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -3,7 +3,6 @@
   min-height: 100vh;
   padding: 1rem;
   background-color: var(--main-color);
-  overflow-x: auto;
 }
 
 .title {
