--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -1,3 +1,8 @@
+.table-container {
+  max-width: 100%;
+  overflow-x: auto;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
